# rustrestapi

./: .env  Cargo.toml  README.md
migrations/2019-07-24-085329_create_roles/: up.sql
migrations/2019-07-25-035631_create_users/: up.sql
src/: db_connection.rs  errors.rs  main.rs  schema.rs
src/handlers/: mod.rs  register.rs  roles.rs
src/models/: role.rs  user.rs
