[package]
name = "kom2steam"
version = "0.1.0"
authors = ["leekheang <ly.kheang.jr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-web = "1.0.5"
diesel = { version = "1.4.2", features = ["postgres", "r2d2"] }
dotenv = "0.14.1"