[package]
name = "kom2steam"
version = "0.1.0"
authors = ["leekheang <ly.kheang.jr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-web = "1.0.5"
diesel = { version = "1.4.2", features = ["postgres", "r2d2" , "chrono"] }
dotenv = "0.14.1"
serde_derive = "1.0.97"
futures = "0.1.28"
serde = "1.0.97"
serde_json = "1.0.40"
jsonwebtoken = "6"
bcrypt = "0.5.0"
chrono = { version = "0.4.7", features = ["serde"] }
csrf-token = { git = "https://github.com/3dom-co-jp/csrf-token.git", branch="v0.2.x" }
hash = "0.3.0"